added currentUser hook

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://rohitnetflix:wXITLOt1J3DrXAIY@netflix.trhjf2u.mongodb.net/test"
+mongodb+srv://rohitnetflix:<password>@netflix.trhjf2u.mongodb.net/test
 
 NEXTAUTH_JWT_SECRET='NEXT-JWT-SECRET'
 NEXTAUTH_SECRET='NEXT-SECRET'
@@ -12,3 +13,9 @@ NEXTAUTH_SECRET='NEXT-SECRET'
 
 MONOGO_PASSWORD='wXITLOt1J3DrXAIY'
 MONOGO_USERNAME='rohitnetflix'
+
+GITHUB_ID=432147fa989778a1cf3c
+GITHUB_SECRET=e45e43f09c213e08f8569a19417c027f1ab91f56
+
+GOOGLE_CLIENT_ID=561322171621-ebj70fsf362uepnggb2mk362914r5dda.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
