--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
@@ -23,6 +24,8 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
